created create meals page

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,5 @@
   VITE_storageBucket= localchefbazaar-c2f05.firebasestorage.app
   VITE_messagingSenderId= 43765617438
   VITE_appId= 1:43765617438:web:3138127b14ce381b42af0f
+
+  VITE_API_URL=http://localhost:3000
