--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
@@ -24,6 +26,9 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.6",
     "react-spinners": "^0.17.0",
+    "stripe": "^20.0.0",
+    "sweetalert2": "^11.26.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
